# menu-fodifood

./: .env.example  .gitignore  .stylelintrc.json  .vercelignore  ABOUT-PAGE-IMPROVEMENTS.md  ADAPTIVE-BACKGROUND-GUIDE.md  ADAPTIVE-BACKGROUND-QUICKSTART.md  ADDRESS-DISPLAY.md  ADMIN-ACCESS.md  ADMIN-ORDERS-IMPROVEMENTS.md  ADMIN-PAGES-REFACTORING-SUMMARY.md  AI-ORCHESTRATION.md  ANALYTICS-ADDED.md  API-401-ISSUE.md  API-FLOW-DIAGRAM.md  API-IMPROVEMENTS-CHECKLIST.md  API-IMPROVEMENTS-FINAL.md  API-IMPROVEMENTS-SUMMARY.md  API-IMPROVEMENTS.md  API-INTEGRATION-COMPLETE.md  API-INTEGRATION-SUMMARY.md  ARCHITECTURE-STRATEGY.md  ARCHITECTURE.md  AUTH-CONFIG.md  AUTH-LOGS.md  AUTO-LOGIN-FIX.md  BACKEND-DEPLOYMENT-ISSUE.md  BANK-INTEGRATION.md  BUGFIX-SUMMARY.md  BUSINESS-PROFILE-NAVIGATION-TEST.md  CART-CHECKOUT-SPLIT.md  CART-OPTIMIZATION-SUMMARY.md  CART-UI-OPTIMIZATION.md  CHECKOUT-AUTOFILL.md  CHECKOUT-ENHANCEMENTS.md  CHECKOUT-STEP3-FIX.md  CHECKOUT-STEPS-INTEGRATION.md  CHECKOUT-UPDATES.md  CHROME-LOGIN-CHECKLIST.md  CLEANUP-COMPLETE.md  (+150 more)
backend/: .env.example  .gitignore  COMPILATION-SUCCESS.md  Cargo.toml  FINAL-STATUS.md  README.md  RESTAURANT-API.md  Shuttle.toml
backend/.sqlx/: query-0a7e0fde5f932d5b93fb3de151970ed07b0c16f21f5300ca0dda72cf1eafe878.json  query-0c279aa625342983d7948f0386a77118bd17763cce14fe4b5a5721ef9645b64f.json  query-0cbbee4a7fa045e72bd2f3aa0ef12f70d9018dea01080f78be3acce9bb27fffa.json  query-16bce89986ba5a99d6f4bdad8f7419658496fe5bfd3151f66f4a8b36c0e939c3.json  query-346078803cb66019cfb46631a4e39760ad818c965c05ef405b7aaa6a18b1ccc7.json  (+22 more)
(+362 files in other folders)
